--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -8,8 +8,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <include
             android:id="@+id/toolbar"
@@ -32,7 +34,7 @@
                 <LinearLayout
                     android:id="@+id/lay_myprof"
                     android:layout_width="match_parent"
-                    android:layout_height="122dp"
+                    android:layout_height="152dp"
                     android:orientation="horizontal">
 
                     <Space
@@ -41,7 +43,7 @@
                         android:layout_weight="1" />
 
                     <LinearLayout
-                        android:layout_width="143dp"
+                        android:layout_width="140dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/layout_border"
                         android:orientation="vertical">
@@ -50,6 +52,7 @@
                             android:id="@+id/img_profile"
                             android:layout_width="match_parent"
                             android:layout_height="74dp"
+                            android:layout_margin="10dp"
                             android:baselineAlignBottom="false"
                             android:clickable="false"
                             android:onClick="onClick"
@@ -58,7 +61,7 @@
                         <EditText
                             android:id="@+id/etxt_newname"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:ems="10"
                             android:fontFamily="serif-monospace"
                             android:gravity="center"
@@ -90,10 +93,10 @@
                         android:layout_height="match_parent"
                         android:layout_weight="0"
                         android:ems="10"
+                        android:gravity="center_horizontal"
                         android:hint="@string/new_profile_description"
-                        android:textAlignment="center"
                         android:inputType="textPersonName"
-                        android:gravity="center_horizontal" />
+                        android:textAlignment="center" />
 
                     <Space
                         android:layout_width="match_parent"
@@ -101,12 +104,6 @@
                         android:layout_weight="1" />
 
                 </LinearLayout>
-
-                <View
-                    android:id="@+id/divider"
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp"
-                    android:background="@drawable/layout_border" />
 
                 <Space
                     android:layout_width="match_parent"
@@ -173,41 +170,22 @@
 
                 </LinearLayout>
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
-
-                <View
-                    android:id="@+id/divider4"
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp"
-                    android:background="@drawable/layout_border" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/btn_validate2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/layout_border"
-                    android:text="@string/validate" />
-
-                <TextView
-                    android:id="@+id/txt_developedby"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="An app developed by SportsTech" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="5dp" />
-
             </LinearLayout>
         </ScrollView>
+
+        <Button
+            android:id="@+id/btn_validate2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/layout_border"
+            android:text="@string/validate" />
+
+        <TextView
+            android:id="@+id/txt_developedby"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="An app developed by SportsTech" />
 
     </LinearLayout>
 
