--- a/app/src/main/res/layout/activity_profile_other.xml
+++ b/app/src/main/res/layout/activity_profile_other.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/profile_constraint_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/profile_other_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -27,6 +27,7 @@
                 android:id="@+id/lay_myprof"
                 android:layout_width="match_parent"
                 android:layout_height="122dp"
+                android:background="@android:color/transparent"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -34,11 +35,10 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/img_profile"
                         android:layout_width="match_parent"
-                        android:layout_height="85dp"
-                        app:srcCompat="@mipmap/ic_usuari_foreground" />
+                        android:layout_height="85dp" />
 
                     <TextView
                         android:id="@+id/txt_nameprofile"
@@ -46,7 +46,6 @@
                         android:layout_height="match_parent"
                         android:fontFamily="monospace"
                         android:gravity="center"
-                        android:text="Pol Yin"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -76,7 +75,6 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="serif-monospace"
                                 android:gravity="center"
-                                android:text="321"
                                 android:textSize="24sp"
                                 android:textStyle="bold" />
 
@@ -107,7 +105,6 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="serif-monospace"
                                 android:gravity="center"
-                                android:text="320"
                                 android:textSize="24sp"
                                 android:textStyle="bold" />
 
@@ -140,9 +137,9 @@
                             android:layout_weight="1" />
 
                         <Button
-                            android:id="@+id/btn_follow"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:id="@+id/btn_profile"
+                            android:layout_width="171dp"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:text="Follow" />
 
@@ -172,7 +169,6 @@
                     android:layout_height="match_parent"
                     android:fontFamily="serif-monospace"
                     android:gravity="center|start"
-                    android:text="Genio, figura, maquina, heroe, crack, mostro, ninja, bestia, titán, campeón, jefe, caza de combate, truhan, zeus, robocop, chulazo, socio."
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -190,11 +186,17 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <Space
-                android:layout_width="match_parent"
                 android:layout_height="10dp" />
+
+            <TextView
+                android:id="@+id/txt_myevents2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="serif-monospace"
+                android:text="My events"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/lay_myevents"
@@ -207,20 +209,10 @@
                     android:layout_height="match_parent">
 
                     <LinearLayout
+                        android:id="@+id/layout_myevents"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical" >
-
-                        <TextView
-                            android:id="@+id/txt_externevents"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:fontFamily="serif-monospace"
-                            android:text="@string/events"
-                            android:textSize="24sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
+                        android:orientation="vertical" />
                 </ScrollView>
 
             </LinearLayout>
@@ -245,33 +237,63 @@
                     android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
+                <TextView
+                    android:id="@+id/txt_myactivities2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="serif-monospace"
+                    android:text="My Upcoming Activities"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/txt_externactivities"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:fontFamily="serif-monospace"
-                        android:text="@string/activities"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
+                    android:orientation="vertical"></LinearLayout>
             </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <View
+                android:id="@+id/divider3"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@drawable/layout_border" />
+
+            <LinearLayout
+                android:id="@+id/lay_eventsliked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="serif-monospace"
+                    android:text="Events Liked"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/layout_toolbar_primary"
+        layout="@layout/layout_toolbar_primary_profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
