--- a/app/src/main/res/layout/layout_toolbar_secondary.xml
+++ b/app/src/main/res/layout/layout_toolbar_secondary.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent" >
 
         <ImageView
-            android:id="@+id/toolbar_secondary_notifications"
+            android:id="@+id/toolbar_notifications"
             android:layout_width="37dp"
             android:layout_height="38dp"
             android:tint="@color/colorPrimary"
@@ -26,7 +26,7 @@
             app:tintMode="src_in" />
 
         <TextView
-            android:id="@+id/toolbar_secondary_home"
+            android:id="@+id/toolbar_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -41,7 +41,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/toolbar_secondary_image_my_profile"
+            android:id="@+id/toolbar_image_my_profile"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="5dp"
@@ -52,7 +52,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/toolbar_secondary_txt_my_profile"
+            android:id="@+id/toolbar_txt_my_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
@@ -60,11 +60,12 @@
             android:text="Manolo Lama"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/toolbar_secondary_image_my_profile"
+            app:layout_constraintEnd_toStartOf="@+id/toolbar_image_my_profile"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.512" />
 
         <TextView
+            android:id="@+id/notificationsNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|end"
@@ -74,9 +75,9 @@
             android:text="1"
             android:textColor="@android:color/holo_red_dark"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/toolbar_secondary_notifications"
-            app:layout_constraintStart_toStartOf="@+id/toolbar_secondary_notifications"
-            app:layout_constraintTop_toTopOf="@+id/toolbar_secondary_notifications"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbar_notifications"
+            app:layout_constraintStart_toStartOf="@+id/toolbar_notifications"
+            app:layout_constraintTop_toTopOf="@+id/toolbar_notifications"
             app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
