--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -19,16 +19,11 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/userImage"
+                    <ImageView
+                        android:id="@+id/profilePicture"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:layout_margin="40px"
-                        android:layout_marginRight="10dp"
-                        app:cardBackgroundColor="@color/pink"
-                        app:cardCornerRadius="360dp">
-
-                    </androidx.cardview.widget.CardView>
+                        android:layout_margin="40px" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
