--- a/app/src/main/res/layout/layout_toolbar_primary_profile.xml
+++ b/app/src/main/res/layout/layout_toolbar_primary_profile.xml
@@ -15,7 +15,7 @@
 
 
         <ImageView
-            android:id="@+id/profile_toolbar_primary_notifications"
+            android:id="@+id/toolbar_notifications"
             android:layout_width="37dp"
             android:layout_height="38dp"
             android:tint="@color/colorPrimaryDark"
@@ -27,7 +27,7 @@
             app:tintMode="src_in" />
 
         <TextView
-            android:id="@+id/toolbar_my_profile_home"
+            android:id="@+id/toolbar_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -57,6 +57,7 @@
             app:layout_constraintVertical_bias="0.512" />
 
         <TextView
+            android:id="@+id/notificationsNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|end"
@@ -66,9 +67,9 @@
             android:text="1"
             android:textColor="@android:color/holo_red_dark"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/profile_toolbar_primary_notifications"
-            app:layout_constraintStart_toStartOf="@+id/profile_toolbar_primary_notifications"
-            app:layout_constraintTop_toTopOf="@+id/profile_toolbar_primary_notifications"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbar_notifications"
+            app:layout_constraintStart_toStartOf="@+id/toolbar_notifications"
+            app:layout_constraintTop_toTopOf="@+id/toolbar_notifications"
             app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.appcompat.widget.Toolbar>
