Initial commit for notifications service

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -14,12 +14,10 @@
         android:background="@android:color/black">
 
         <LinearLayout
+            android:id="@+id/notificationsLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-
-        </LinearLayout>
+            android:orientation="vertical"/>
 
     </ScrollView>
 
